--- a/FEWeb/HTML/test.html
+++ b/FEWeb/HTML/test.html
@@ -1,7 +1,16 @@
 <!DOCTYPE html>
 <html>
 <head>
+	<!-- This is title page 網頁頁籤 -->
 	<title>title, my web</title>
+
+
+	<!-- This is the link tag used for css and other task -->
+	<link rel="stylesheet" type="text/css" href="css/main.css">
+
+	<!-- This is the link to my css-->
+	<link rel="stylesheet" type="text/css" href="css/test.css">
+
 </head>
 <body>
 	<!-- commented -->
@@ -22,6 +31,67 @@
 
 	<!-- h6 -->
 	<h6>h6 tag</h6>
+
+	<!-- this is the Nav tag(類似導覽、先後)-->
+	<nav>
+		
+		<!--this is the img tag -->  <!-- src = source -->
+		<img src="http://via.placeholder.com/300x300">
+
+		<!-- this is my Anchor tag 超連結 -->
+		<a href="#">this is my first 超連結</a>
+
+		<!-- this is my Anchor tag 超連結 -->
+		<a href="#">this is my first 超連結</a>
+
+	</nav>
+
+	<!-- this is the paragraph tag-->
+	<p>
+		
+		this is the paragragh in p tag.
+
+	</p>
+
+
+	<!-- this is a section tag (section is like a container) -->
+	<section>
+		
+		<p>
+			this is the paragragh in section tag.
+		</p>
+
+	</section>
+
+	<!-- br = break, 往下空一行 -->
+	<br>
+
+	<!-- this is the div tag-->
+	<div>
+		
+		<p>
+			this is the paragragh in div tag.
+		</p>
+	</div>
+
+	<!-- this is an unordered list-->
+	<ul>
+		
+		<!-- li = list tag-->
+		<li>this is item 1</li>
+		<li>this is item 2</li>
+		<li>this is item 3</li>
+
+	</ul>
+
+	<!-- this is an ordered list -->
+	<ol>
+		
+		<li>this is item 1</li>
+		<li>this is item 2</li>
+		<li>this is item 3</li>
+
+	</ol>
 
 </body>
 </html>
