--- a/FEWeb/HTML/test.html
+++ b/FEWeb/HTML/test.html
@@ -11,8 +11,34 @@
 	<!-- This is the link to my css-->
 	<link rel="stylesheet" type="text/css" href="css/test.css">
 
+	<!-- this is internal CSS-->
+	<style>
+		
+		h1 {
+			color: red;
+			background: yellow;	
+		}
+
+		h2 {
+			color: green;
+			margin-top: 250px;
+		}
+
+		h3 {
+			color: black;
+			background: purple;
+			width: 300px;
+			text-align: center;
+		}
+
+	</style>
+
 </head>
 <body>
+
+	<!--this is inline CSS-->
+	<h1 style="color: pink; background-color: gray; border: 1px solid black;">Hellow World!</h1>
+
 	<!-- commented -->
 	<!--h1 tag -->
 	<h1>first html tag. h1 tag</h1>
