--- a/demo.com/about.html
+++ b/demo.com/about.html
@@ -16,7 +16,7 @@
 	<nav>
 		
 		<!--<img id="logo" scr="http://4jmedia.co/lecture/logo/logo.png" alt="logo"> -->
-		<img id="logo" scr="img/logo.png" alt="logo">
+		<img id="logo" src="img/logo.png" alt="logo">
 		
 
 		<a href="index.html">Home</a>
@@ -36,14 +36,14 @@
 	<!--page mame-->
 	<h1 id="page-title">About</h1>
 
-	<section>
+	<section id="project1">
 		
 		<img id="about-slideshow" src="http://via.placeholder.com/750x550">
 
-	</section>
 
 
-	<section id="About">
+
+		<div id="project1">
 
 		<h1>About me</h1>
 		<br>
@@ -68,7 +68,7 @@ Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem
 		</p>
 
 
-
+	</div>
 
 	</section>
 
