--- a/demo.com/contact.html
+++ b/demo.com/contact.html
@@ -16,7 +16,7 @@
 	<nav>
 		
 		<!--<img id="logo" scr="http://4jmedia.co/lecture/logo/logo.png" alt="logo"> -->
-		<img id="logo" scr="img/logo.png" alt="logo">
+		<img id="logo" src="img/logo.png" alt="logo">
 		
 
 		<a href="index.html">Home</a>
@@ -41,18 +41,18 @@
 		<!-- label-->
 		<label>Name :</label>
 		<!--name input對話框-->
-		<input type="text" >
+		<input type="text" class="form-control">
 
 
 		<!-- label-->
 		<label>Phone :</label>
 		<!--phone# input對話框-->
-		<input type="text" >
+		<input type="text" class="form-control">
 
 		<!-- label-->
 		<label>E-mail :</label>
 		<!--mail input對話框-->
-		<input type="text" >
+		<input type="text" class="form-control">
 
 		<br>
 		<br>
@@ -61,11 +61,11 @@
 		<label>Message :</label>
 		<br>
 		<!-- message input 多行輸入框-->
-		<textarea rows="10" cols="150"></textarea>
+		<textarea rows="10" cols="150" class="form-control"></textarea>
 
 		<br>
 		<!-- submit button-->
-		<button type="submit">Send</button>
+		<button type="submit" class="btn btn-primary">Send</button>
 
 	</form>
 
