--- a/demo.com/index.html
+++ b/demo.com/index.html
@@ -15,8 +15,8 @@
 	<!-- this is the navigation -->
 	<nav>
 		
-		<!--<img id="logo" scr="http://4jmedia.co/lecture/logo/logo.png" alt="logo"> -->
-		<img id="logo" scr="img/logo.png" alt="logo">
+		<!--<img id="logo" src="http://4jmedia.co/lecture/logo/logo.png" alt="logo"> -->
+		<img id="logo" src="img/logo.png" alt="logo">
 		
 
 		<a class="active" href="index.html">Home</a>
