--- a/demo.com/portfolio.html
+++ b/demo.com/portfolio.html
@@ -16,7 +16,7 @@
 	<nav>
 		
 		<!--<img id="logo" scr="http://4jmedia.co/lecture/logo/logo.png" alt="logo"> -->
-		<img id="logo" scr="img/logo.png" alt="logo">
+		<img id="logo" src="img/logo.png" alt="logo">
 		
 
 		<a href="index.html">Home</a>
@@ -36,18 +36,12 @@
 	<!--page mame-->
 	<h1 id="page-title">Portfolio</h1>
 
-	<section>
-		
-		<img id="projectpage" src="http://via.placeholder.com/1200x300">
-
-	</section>
-
 
 	<section id="project1">
 
 		<img id="project1-img" src="http://via.placeholder.com/700x300">
 
-		<div>
+		<div id="project1">
 		
 			<h1>Project ㄅ</h1>
 			<br>
@@ -69,7 +63,7 @@ Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem
 
 		<img id="project2-img" src="http://via.placeholder.com/700x300">
 
-		<div>
+		<div id="project2">
 		
 			<h1>Project ㄆ</h1>
 			<br>
@@ -90,7 +84,7 @@ Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem
 
 		<img id="project3-img" src="http://via.placeholder.com/700x300">
 
-		<div>
+		<div id="project3">
 		
 			<h1>Project ㄇ</h1>
 			<br>
