--- a/demo.com/services.html
+++ b/demo.com/services.html
@@ -16,7 +16,7 @@
 	<nav>
 		
 		<!--<img id="logo" scr="http://4jmedia.co/lecture/logo/logo.png" alt="logo"> -->
-		<img id="logo" scr="img/logo.png" alt="logo">
+		<img id="logo" src="img/logo.png" alt="logo">
 		
 
 		<a href="index.html">Home</a>
@@ -43,7 +43,7 @@
 	</section>
 
 
-	<section id="paragraph">
+	<section id="services-paragraph">
 
 		<h1>Plan ㄅ</h1>
 		<br>
