--- a/bootstrap.com/index.html
+++ b/bootstrap.com/index.html
@@ -13,7 +13,7 @@
     <link rel="stylesheet" type="text/css" href="css/custom.css">
 
 
-    <title>Chi-Sheng Chen | 陳麒升</title>
+    <title>Chi-ShengChen | Home</title>
   </head>
   <body>
     <!-- 開始navugation -->
@@ -131,12 +131,100 @@
 
       </div>
       <!--end carousel div-->
-
-
-
     </header>
     <!-- end header -->
 
+    <br>
+
+    <!--start container-->
+    <div class="container">
+
+      <h1 class="my-4">Welcome to my page</h1>
+
+      <br>
+
+      <!-- start marketing icons section /card文字卡--> 
+      <div class="row">
+        <!-- col==column, lg==large-->
+        <div class="col-lg-12 mb-4">
+          <div class="card h-100">
+            <h4 class="card-header">Card Title</h4>
+            <div class="card-body">
+              <p class="card-text">This is my p tag with some text.</p>
+            </div>
+            <div class="card-footer">
+              <a href="#" class="btn btn-primary">Learn More</a>
+            </div>
+          </div>
+        </div>
+
+        <div class="col-lg-4 mb-4">
+          <div class="card h-100">
+            <h4 class="card-header">Card Title</h4>
+            <div class="card-body">
+              <p class="card-text">This is my p tag with some text.</p>
+            </div>
+            <div class="card-footer">
+              <a href="#" class="btn btn-primary">Learn More</a>
+            </div>
+          </div>
+        </div>
+
+        <div class="col-lg-4 mb-4">
+          <div class="card h-100">
+            <h4 class="card-header">Card Title</h4>
+            <div class="card-body">
+              <p class="card-text">This is my p tag with some text.</p>
+            </div>
+            <div class="card-footer">
+              <a href="#" class="btn btn-primary">Learn More</a>
+            </div>
+          </div>
+        </div>
+
+        <div class="col-lg-4 mb-4">
+          <div class="card h-100">
+            <h4 class="card-header">Card Title</h4>
+            <div class="card-body">
+              <p class="card-text">This is my p tag with some text.</p>
+            </div>
+            <div class="card-footer">
+              <a href="#" class="btn btn-primary">Learn More</a>
+            </div>
+          </div>
+        </div>
+
+      </div>
+      <!-- end marketing icons section -->
+
+      <br>
+
+      <!-- start call to action -->
+      <div class="row mb-4">
+        <!-- 一般內文-->
+        <div class="col-md-8">
+          <p>this is my p with meow-meow~.</p>
+        </div>
+
+        <!-- 灰底白字按鈕 -->
+        <div class="col-md-4">
+          <a class="btn btn-lg btn-secondary btn-block" href="#">call a action</a>
+        </div>
+        
+      </div>
+      <!--end call to action-->
+
+    </div>
+    <!-- end container -->
+
+    <br>
+
+    <!--footer-->
+    <footer class="py-5 bg-dark">
+      <div class="container">
+        <p class="m-0 text-center text-white">Copyright &copy; Chi-ShengChen 2018</p>
+      </div>
+    </footer>
 
     <!-- Optional JavaScript -->
     <!-- jQuery first, then Popper.js, then Bootstrap JS -->
